--- a/GymCareForTrainer/GymCareForTrainer/Screen/MessageAndInfo/MessageVC/Cell/MessageViewCell.xib
+++ b/GymCareForTrainer/GymCareForTrainer/Screen/MessageAndInfo/MessageVC/Cell/MessageViewCell.xib
@@ -18,7 +18,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="115" id="KGk-i7-Jjw" customClass="MessageViewCell" customModule="GymCare" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="115" id="KGk-i7-Jjw" customClass="MessageViewCell" customModule="GymCareForTrainer" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="115"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -32,7 +32,7 @@
                             <constraint firstAttribute="height" constant="2" id="dSE-ZA-GzT"/>
                         </constraints>
                     </view>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bjA-r5-wQP" customClass="AvatarView" customModule="GymCare" customModuleProvider="target">
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bjA-r5-wQP" customClass="AvatarView" customModule="GymCareForTrainer" customModuleProvider="target">
                         <rect key="frame" x="20" y="12" width="44" height="44"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -43,7 +43,7 @@
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" 20/06" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d3L-fR-w0E">
                         <rect key="frame" x="265" y="24.333333333333332" width="35" height="14.999999999999996"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="35" id="n7Z-eO-gxz"/>
+                            <constraint firstAttribute="width" priority="1" constant="35" id="n7Z-eO-gxz"/>
                         </constraints>
                         <fontDescription key="fontDescription" name="SFProDisplay-Light" family="SF Pro Display" pointSize="12"/>
                         <nil key="textColor"/>
