--- a/GymCareForTrainer/GymCareForTrainer/Screen/Schedule/Program/Cell/ProgramViewCell.xib
+++ b/GymCareForTrainer/GymCareForTrainer/Screen/Schedule/Program/Cell/ProgramViewCell.xib
@@ -8,6 +8,9 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
+        <array key="SFProDisplay-Bold.ttf">
+            <string>SFProDisplay-Bold</string>
+        </array>
         <array key="SFProDisplay-Regular.ttf">
             <string>SFProDisplay-Regular</string>
         </array>
@@ -28,20 +31,43 @@
                         <color key="textColor" name="color_3E4041"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="no_image" translatesAutoresizingMaskIntoConstraints="NO" id="Efr-az-Qm0">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="no_image" translatesAutoresizingMaskIntoConstraints="NO" id="Efr-az-Qm0">
                         <rect key="frame" x="20" y="32" width="30" height="30"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="30" id="9sf-0A-gJQ"/>
                             <constraint firstAttribute="width" constant="30" id="f04-rR-0KN"/>
                         </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                <real key="value" value="15"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
                     </imageView>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_next" translatesAutoresizingMaskIntoConstraints="NO" id="LFs-ZP-WoE">
+                    <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_next" translatesAutoresizingMaskIntoConstraints="NO" id="LFs-ZP-WoE">
                         <rect key="frame" x="350" y="39" width="10" height="16"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="16" id="AGG-hd-wju"/>
                             <constraint firstAttribute="width" constant="10" id="W7W-bw-bmj"/>
                         </constraints>
                     </imageView>
+                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nxu-CG-9Gm">
+                        <rect key="frame" x="300" y="35" width="60" height="24"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="60" id="AVL-F5-b9a"/>
+                            <constraint firstAttribute="height" constant="24" id="G2O-zX-Ath"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" name="SFProDisplay-Bold" family="SF Pro Display" pointSize="12"/>
+                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                        <state key="normal" title="Đã huỷ">
+                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </state>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                <real key="value" value="8"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                    </button>
                 </subviews>
                 <constraints>
                     <constraint firstItem="2rF-KY-WHt" firstAttribute="leading" secondItem="Efr-az-Qm0" secondAttribute="trailing" constant="10" id="CDl-mE-KVK"/>
@@ -49,11 +75,18 @@
                     <constraint firstItem="LFs-ZP-WoE" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="2rF-KY-WHt" secondAttribute="trailing" constant="10" id="SH6-e5-74P"/>
                     <constraint firstItem="LFs-ZP-WoE" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="Thu-AL-DTG"/>
                     <constraint firstItem="Efr-az-Qm0" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="UWK-cA-6JF"/>
+                    <constraint firstItem="Nxu-CG-9Gm" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="Yv5-wZ-FYw"/>
+                    <constraint firstAttribute="trailing" secondItem="Nxu-CG-9Gm" secondAttribute="trailing" constant="20" id="alC-5U-3dC"/>
                     <constraint firstItem="Efr-az-Qm0" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="iTB-5w-b0j"/>
                     <constraint firstItem="2rF-KY-WHt" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="xgG-Q9-ALa"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="cancelButton" destination="Nxu-CG-9Gm" id="Ftx-fr-hYA"/>
+                <outlet property="iconImageView" destination="Efr-az-Qm0" id="KW8-7W-xhK"/>
+                <outlet property="titleLabel" destination="2rF-KY-WHt" id="0Uj-Zr-tuk"/>
+            </connections>
             <point key="canvasLocation" x="68.702290076335871" y="11.971830985915494"/>
         </tableViewCell>
     </objects>
