--- a/GymCareForTrainer/GymCareForTrainer/Screen/Notification/Cell/NotificationViewCell.xib
+++ b/GymCareForTrainer/GymCareForTrainer/Screen/Notification/Cell/NotificationViewCell.xib
@@ -24,7 +24,7 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_read" highlightedImage="ic_unread" translatesAutoresizingMaskIntoConstraints="NO" id="1lr-68-bIA">
-                        <rect key="frame" x="437" y="41.333333333333336" width="16" height="16"/>
+                        <rect key="frame" x="437" y="15" width="16" height="16"/>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="08/14/2022" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Ob-qI-XZh">
                         <rect key="frame" x="43.000000000000007" y="15.666666666666664" width="71.666666666666686" height="17"/>
@@ -58,7 +58,7 @@
                         <color key="textColor" name="color_3E4041"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hMK-Lp-zrv">
+                    <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hMK-Lp-zrv">
                         <rect key="frame" x="406.66666666666669" y="12" width="46" height="24"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jRh-y4-aSM">
@@ -94,10 +94,10 @@
                     <constraint firstItem="uTo-RE-UXh" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="V1g-iX-Xmb"/>
                     <constraint firstItem="4EH-SY-dr1" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="VkE-Rw-QwB"/>
                     <constraint firstItem="zpp-OI-s5b" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="Z5c-Ai-rdM"/>
+                    <constraint firstItem="1lr-68-bIA" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="15" id="fr7-je-UBB"/>
                     <constraint firstAttribute="trailing" secondItem="4EH-SY-dr1" secondAttribute="trailing" id="gr9-Db-fai"/>
                     <constraint firstItem="zpp-OI-s5b" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="18" id="igk-ca-mOJ"/>
                     <constraint firstItem="r6a-tD-fDW" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="18" id="jsU-UD-yTl"/>
-                    <constraint firstItem="1lr-68-bIA" firstAttribute="centerY" secondItem="r6a-tD-fDW" secondAttribute="centerY" id="lOP-8a-OMR"/>
                     <constraint firstItem="uTo-RE-UXh" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="pj2-hf-3Hf"/>
                     <constraint firstItem="4Ob-qI-XZh" firstAttribute="leading" secondItem="zpp-OI-s5b" secondAttribute="trailing" constant="9" id="smX-9Z-rTz"/>
                     <constraint firstItem="4Ob-qI-XZh" firstAttribute="centerY" secondItem="zpp-OI-s5b" secondAttribute="centerY" id="zaQ-R3-AgI"/>
