--- a/GymCareForTrainer/GymCareForTrainer/Screen/Schedule/Program/Cell/ProgramViewCell.xib
+++ b/GymCareForTrainer/GymCareForTrainer/Screen/Schedule/Program/Cell/ProgramViewCell.xib
@@ -8,30 +8,30 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
-        <array key="SFProDisplay-Bold.ttf">
-            <string>SFProDisplay-Bold</string>
-        </array>
         <array key="SFProDisplay-Regular.ttf">
             <string>SFProDisplay-Regular</string>
+        </array>
+        <array key="SFProDisplay-Semibold.ttf">
+            <string>SFProDisplay-Semibold</string>
         </array>
     </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="94" id="KGk-i7-Jjw" customClass="ProgramViewCell" customModule="GymCareForTrainer" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="380" height="94"/>
+            <rect key="frame" x="0.0" y="0.0" width="312" height="94"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="380" height="94"/>
+                <rect key="frame" x="0.0" y="0.0" width="312" height="94"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Yoga" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2rF-KY-WHt">
-                        <rect key="frame" x="60" y="37" width="36" height="20"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Yoga Yoga Yoga Yoga Yoga Yoga Yoga Yoga Yoga Yoga Yoga Yoga " textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2rF-KY-WHt">
+                        <rect key="frame" x="60" y="26.666666666666668" width="157" height="40.666666666666657"/>
                         <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="17"/>
                         <color key="textColor" name="color_3E4041"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="no_image" translatesAutoresizingMaskIntoConstraints="NO" id="Efr-az-Qm0">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Efr-az-Qm0">
                         <rect key="frame" x="20" y="32" width="30" height="30"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="30" id="9sf-0A-gJQ"/>
@@ -41,58 +41,72 @@
                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                 <real key="value" value="15"/>
                             </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                <real key="value" value="1"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                <color key="value" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
                     </imageView>
                     <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_next" translatesAutoresizingMaskIntoConstraints="NO" id="LFs-ZP-WoE">
-                        <rect key="frame" x="350" y="39" width="10" height="16"/>
+                        <rect key="frame" x="282" y="39" width="10" height="16"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="16" id="AGG-hd-wju"/>
                             <constraint firstAttribute="width" constant="10" id="W7W-bw-bmj"/>
                         </constraints>
                     </imageView>
-                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nxu-CG-9Gm">
-                        <rect key="frame" x="300" y="35" width="60" height="24"/>
+                    <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="a5S-nI-hRM">
+                        <rect key="frame" x="222" y="34" width="70" height="26.333333333333329"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Đã huỷ" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9u5-hJ-Qur">
+                                <rect key="frame" x="10" y="5.0000000000000009" width="50" height="14.333333333333336"/>
+                                <fontDescription key="fontDescription" name="SFProDisplay-Semibold" family="SF Pro Display" pointSize="12"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="60" id="AVL-F5-b9a"/>
-                            <constraint firstAttribute="height" constant="24" id="G2O-zX-Ath"/>
+                            <constraint firstAttribute="width" relation="lessThanOrEqual" constant="100" id="1G9-lW-TWN"/>
+                            <constraint firstAttribute="trailing" secondItem="9u5-hJ-Qur" secondAttribute="trailing" constant="10" id="Lz7-hf-qST"/>
+                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="70" id="Rxq-Ay-PCU"/>
+                            <constraint firstItem="9u5-hJ-Qur" firstAttribute="top" secondItem="a5S-nI-hRM" secondAttribute="top" constant="5" id="eV2-dF-EwB"/>
+                            <constraint firstItem="9u5-hJ-Qur" firstAttribute="leading" secondItem="a5S-nI-hRM" secondAttribute="leading" constant="10" id="igD-2e-L3w"/>
+                            <constraint firstAttribute="bottom" secondItem="9u5-hJ-Qur" secondAttribute="bottom" constant="7" id="kk8-tc-Vrr"/>
                         </constraints>
-                        <fontDescription key="fontDescription" name="SFProDisplay-Bold" family="SF Pro Display" pointSize="12"/>
-                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                        <state key="normal" title="Đã huỷ">
-                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        </state>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                <real key="value" value="8"/>
+                                <real key="value" value="2"/>
                             </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
-                    </button>
+                    </view>
                 </subviews>
                 <constraints>
                     <constraint firstItem="2rF-KY-WHt" firstAttribute="leading" secondItem="Efr-az-Qm0" secondAttribute="trailing" constant="10" id="CDl-mE-KVK"/>
                     <constraint firstAttribute="trailing" secondItem="LFs-ZP-WoE" secondAttribute="trailing" constant="20" id="D2n-oK-FXd"/>
-                    <constraint firstItem="LFs-ZP-WoE" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="2rF-KY-WHt" secondAttribute="trailing" constant="10" id="SH6-e5-74P"/>
+                    <constraint firstItem="a5S-nI-hRM" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="FWi-uV-wDC"/>
+                    <constraint firstItem="a5S-nI-hRM" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="2rF-KY-WHt" secondAttribute="trailing" constant="5" id="PBq-l0-91k"/>
                     <constraint firstItem="LFs-ZP-WoE" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="Thu-AL-DTG"/>
                     <constraint firstItem="Efr-az-Qm0" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="UWK-cA-6JF"/>
-                    <constraint firstItem="Nxu-CG-9Gm" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="Yv5-wZ-FYw"/>
-                    <constraint firstAttribute="trailing" secondItem="Nxu-CG-9Gm" secondAttribute="trailing" constant="20" id="alC-5U-3dC"/>
                     <constraint firstItem="Efr-az-Qm0" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="iTB-5w-b0j"/>
                     <constraint firstItem="2rF-KY-WHt" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="xgG-Q9-ALa"/>
+                    <constraint firstAttribute="trailing" secondItem="a5S-nI-hRM" secondAttribute="trailing" constant="20" id="yDR-56-QOE"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="cancelButton" destination="Nxu-CG-9Gm" id="Ftx-fr-hYA"/>
+                <outlet property="cancelLabel" destination="9u5-hJ-Qur" id="kHI-gE-Tw9"/>
+                <outlet property="cancelView" destination="a5S-nI-hRM" id="Rq3-go-k9V"/>
                 <outlet property="iconImageView" destination="Efr-az-Qm0" id="KW8-7W-xhK"/>
                 <outlet property="titleLabel" destination="2rF-KY-WHt" id="0Uj-Zr-tuk"/>
+                <outlet property="widthConstrant" destination="f04-rR-0KN" id="mXn-M2-Dj4"/>
             </connections>
-            <point key="canvasLocation" x="68.702290076335871" y="11.971830985915494"/>
+            <point key="canvasLocation" x="16.793893129770993" y="11.971830985915494"/>
         </tableViewCell>
     </objects>
     <resources>
         <image name="ic_next" width="7.5" height="12"/>
-        <image name="no_image" width="864" height="587"/>
         <namedColor name="color_3E4041">
             <color red="0.24300000071525574" green="0.25099998712539673" blue="0.25499999523162842" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
