--- a/GymCareForTrainer/GymCareForTrainer/Screen/Schedule/ScheduleVC.xib
+++ b/GymCareForTrainer/GymCareForTrainer/Screen/Schedule/ScheduleVC.xib
@@ -27,7 +27,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dzZ-FT-h7q">
-                    <rect key="frame" x="0.0" y="110" width="393" height="742"/>
+                    <rect key="frame" x="0.0" y="110" width="393" height="708"/>
                     <subviews>
                         <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="nOX-oD-GMR" customClass="JTACMonthView" customModule="JTAppleCalendar">
                             <rect key="frame" x="0.0" y="0.0" width="393" height="400"/>
@@ -70,7 +70,7 @@
                                 <constraint firstItem="ZY8-jb-26V" firstAttribute="top" secondItem="whx-HN-Zfg" secondAttribute="top" id="y61-BV-14B"/>
                             </constraints>
                         </view>
-                        <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Of3-I7-hwz">
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Of3-I7-hwz">
                             <rect key="frame" x="106.66666666666669" y="610" width="180" height="30"/>
                             <color key="backgroundColor" systemColor="systemIndigoColor"/>
                             <constraints>
