--- a/GymCareForTrainer/GymCareForTrainer/Screen/Other/OtherVC.xib
+++ b/GymCareForTrainer/GymCareForTrainer/Screen/Other/OtherVC.xib
@@ -137,10 +137,71 @@
                     </constraints>
                 </view>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Ckl-Cm-XiE">
-                    <rect key="frame" x="0.0" y="110" width="393" height="136"/>
+                    <rect key="frame" x="0.0" y="110" width="393" height="204"/>
                     <subviews>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IT3-mI-nCg">
+                            <rect key="frame" x="0.0" y="0.0" width="393" height="68"/>
+                            <subviews>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xfU-QP-MZ3">
+                                    <rect key="frame" x="0.0" y="66" width="393" height="2"/>
+                                    <color key="backgroundColor" name="color_EFEFEF"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="2" id="jRf-Ea-Jb1"/>
+                                    </constraints>
+                                </view>
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="money-back-guarantee" translatesAutoresizingMaskIntoConstraints="NO" id="u3u-ED-yBN">
+                                    <rect key="frame" x="20" y="22" width="24" height="24"/>
+                                    <color key="tintColor" name="main_color"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="24" id="66g-YO-7sb"/>
+                                        <constraint firstAttribute="height" constant="24" id="BbU-we-0Rn"/>
+                                    </constraints>
+                                </imageView>
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_next" translatesAutoresizingMaskIntoConstraints="NO" id="ffd-iD-fkz">
+                                    <rect key="frame" x="363" y="26" width="10" height="16"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="10" id="GJe-Ii-R21"/>
+                                        <constraint firstAttribute="height" constant="16" id="YDL-TC-c7b"/>
+                                    </constraints>
+                                </imageView>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lịch sử" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G1I-dp-kfy">
+                                    <rect key="frame" x="54" y="24.333333333333343" width="299" height="19.333333333333329"/>
+                                    <fontDescription key="fontDescription" name="SFProDisplay-Bold" family="SF Pro Display" pointSize="16"/>
+                                    <color key="textColor" name="color_3E4041"/>
+                                    <nil key="highlightedColor"/>
+                                    <userDefinedRuntimeAttributes>
+                                        <userDefinedRuntimeAttribute type="string" keyPath="localization" value="Lịch sử"/>
+                                    </userDefinedRuntimeAttributes>
+                                </label>
+                                <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="x14-ls-cb7">
+                                    <rect key="frame" x="0.0" y="0.0" width="393" height="66"/>
+                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                    <connections>
+                                        <action selector="onClickButton:" destination="-1" eventType="touchUpInside" id="KHB-FU-sPF"/>
+                                    </connections>
+                                </button>
+                            </subviews>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <constraints>
+                                <constraint firstItem="x14-ls-cb7" firstAttribute="top" secondItem="IT3-mI-nCg" secondAttribute="top" id="129-we-t9W"/>
+                                <constraint firstItem="xfU-QP-MZ3" firstAttribute="top" secondItem="x14-ls-cb7" secondAttribute="bottom" id="1vQ-sJ-01i"/>
+                                <constraint firstAttribute="bottom" secondItem="xfU-QP-MZ3" secondAttribute="bottom" id="ELk-kK-qO1"/>
+                                <constraint firstItem="ffd-iD-fkz" firstAttribute="leading" secondItem="G1I-dp-kfy" secondAttribute="trailing" constant="10" id="GBg-Dp-DmK"/>
+                                <constraint firstAttribute="trailing" secondItem="ffd-iD-fkz" secondAttribute="trailing" constant="20" id="NNT-xt-hFt"/>
+                                <constraint firstAttribute="trailing" secondItem="xfU-QP-MZ3" secondAttribute="trailing" id="bNw-bC-t1s"/>
+                                <constraint firstAttribute="height" constant="68" id="dN5-Uo-QEV"/>
+                                <constraint firstItem="ffd-iD-fkz" firstAttribute="centerY" secondItem="IT3-mI-nCg" secondAttribute="centerY" id="fKa-hO-Wyk"/>
+                                <constraint firstItem="G1I-dp-kfy" firstAttribute="leading" secondItem="u3u-ED-yBN" secondAttribute="trailing" constant="10" id="fbI-Rg-yHf"/>
+                                <constraint firstItem="G1I-dp-kfy" firstAttribute="centerY" secondItem="IT3-mI-nCg" secondAttribute="centerY" id="gsh-Bq-9sE"/>
+                                <constraint firstItem="u3u-ED-yBN" firstAttribute="centerY" secondItem="IT3-mI-nCg" secondAttribute="centerY" id="im0-E0-T1i"/>
+                                <constraint firstAttribute="trailing" secondItem="x14-ls-cb7" secondAttribute="trailing" id="izw-wa-LZa"/>
+                                <constraint firstItem="u3u-ED-yBN" firstAttribute="leading" secondItem="IT3-mI-nCg" secondAttribute="leading" constant="20" id="oDk-fA-Rlx"/>
+                                <constraint firstItem="xfU-QP-MZ3" firstAttribute="leading" secondItem="IT3-mI-nCg" secondAttribute="leading" id="wOP-Av-Fct"/>
+                                <constraint firstItem="x14-ls-cb7" firstAttribute="leading" secondItem="IT3-mI-nCg" secondAttribute="leading" id="yVa-fN-IQh"/>
+                            </constraints>
+                        </view>
                         <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZCf-3C-SyW">
-                            <rect key="frame" x="0.0" y="-68" width="393" height="68"/>
+                            <rect key="frame" x="0.0" y="68" width="393" height="68"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="U7j-t5-byK">
                                     <rect key="frame" x="0.0" y="66" width="393" height="2"/>
@@ -165,7 +226,7 @@
                                     </constraints>
                                 </imageView>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lịch sử" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cgo-H6-NYA">
-                                    <rect key="frame" x="54" y="24.333333333333329" width="299" height="19.333333333333329"/>
+                                    <rect key="frame" x="54" y="24.333333333333343" width="299" height="19.333333333333329"/>
                                     <fontDescription key="fontDescription" name="SFProDisplay-Bold" family="SF Pro Display" pointSize="16"/>
                                     <color key="textColor" name="color_3E4041"/>
                                     <nil key="highlightedColor"/>
@@ -201,7 +262,7 @@
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="m9W-fB-lyz">
-                            <rect key="frame" x="0.0" y="0.0" width="393" height="68"/>
+                            <rect key="frame" x="0.0" y="68" width="393" height="68"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gy8-G4-YVS">
                                     <rect key="frame" x="0.0" y="66" width="393" height="2"/>
@@ -262,7 +323,7 @@
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fd2-Lt-uOU">
-                            <rect key="frame" x="0.0" y="68" width="393" height="68"/>
+                            <rect key="frame" x="0.0" y="136" width="393" height="68"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pUz-8B-D8e">
                                     <rect key="frame" x="0.0" y="66" width="393" height="2"/>
@@ -287,7 +348,7 @@
                                     </constraints>
                                 </imageView>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Đăng xuất" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o21-zt-6Zk">
-                                    <rect key="frame" x="54" y="24.333333333333343" width="299" height="19.333333333333329"/>
+                                    <rect key="frame" x="54" y="24.333333333333314" width="299" height="19.333333333333329"/>
                                     <fontDescription key="fontDescription" name="SFProDisplay-Bold" family="SF Pro Display" pointSize="16"/>
                                     <color key="textColor" name="color_3E4041"/>
                                     <nil key="highlightedColor"/>
